tests/suite/snapshots/suite__case_m9b4.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Literal
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Break
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 3
    line: 1
    column: 0
- token: Indent
  start:
    index: 3
    line: 1
    column: 0
  end:
    index: 4
    line: 1
    column: 1
- token: Scalar
  start:
    index: 4
    line: 1
    column: 1
  end:
    index: 11
    line: 1
    column: 8
- token: ScalarBreak
  start:
    index: 11
    line: 1
    column: 8
  end:
    index: 13
    line: 2
    column: 0
- token: Indent
  start:
    index: 13
    line: 2
    column: 0
  end:
    index: 14
    line: 2
    column: 1
- token: Scalar
  start:
    index: 14
    line: 2
    column: 1
  end:
    index: 19
    line: 2
    column: 6
- token: ScalarBreak
  start:
    index: 19
    line: 2
    column: 6
  end:
    index: 21
    line: 3
    column: 0
- token: Indent
  start:
    index: 21
    line: 3
    column: 0
  end:
    index: 21
    line: 3
    column: 0
- token: Break
  start:
    index: 21
    line: 3
    column: 0
  end:
    index: 23
    line: 4
    column: 0
- token: Indent
  start:
    index: 23
    line: 4
    column: 0
  end:
    index: 23
    line: 4
    column: 0
- token: Break
  start:
    index: 23
    line: 4
    column: 0
  end:
    index: 25
    line: 5
    column: 0

