tests/suite/snapshots/suite__case_mjs9.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Folded
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Break
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 3
    line: 1
    column: 0
- token: Indent
  start:
    index: 3
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 2
- token: Scalar
  start:
    index: 5
    line: 1
    column: 2
  end:
    index: 9
    line: 1
    column: 6
- token: ScalarBreak
  start:
    index: 9
    line: 1
    column: 6
  end:
    index: 11
    line: 2
    column: 0
- token: Indent
  start:
    index: 11
    line: 2
    column: 0
  end:
    index: 12
    line: 2
    column: 1
- token: ScalarBreak
  start:
    index: 12
    line: 2
    column: 1
  end:
    index: 14
    line: 3
    column: 0
- token: Indent
  start:
    index: 14
    line: 3
    column: 0
  end:
    index: 16
    line: 3
    column: 2
- token: Scalar
  start:
    index: 16
    line: 3
    column: 2
  end:
    index: 21
    line: 3
    column: 7
- token: ScalarBreak
  start:
    index: 21
    line: 3
    column: 7
  end:
    index: 23
    line: 4
    column: 0
- token: Indent
  start:
    index: 23
    line: 4
    column: 0
  end:
    index: 23
    line: 4
    column: 0
- token: ScalarBreak
  start:
    index: 23
    line: 4
    column: 0
  end:
    index: 25
    line: 5
    column: 0
- token: Indent
  start:
    index: 25
    line: 5
    column: 0
  end:
    index: 27
    line: 5
    column: 2
- token: Scalar
  start:
    index: 27
    line: 5
    column: 2
  end:
    index: 30
    line: 5
    column: 5
- token: ScalarBreak
  start:
    index: 30
    line: 5
    column: 5
  end:
    index: 32
    line: 6
    column: 0

