tests/suite/snapshots/suite__case_mus6_02.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Directive
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: DirectiveName
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 5
- token: Separator
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 7
- token: YamlVersion
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 10
- token: Break
  start:
    line: 0
    column: 10
  end:
    line: 1
    column: 0
- token: DirectivesEnd
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 3
- token: Empty
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 3
- token: Break
  start:
    line: 1
    column: 3
  end:
    line: 2
    column: 0

