tests/suite/snapshots/suite__case_mus6_04.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Directive
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: DirectiveName
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 5
    line: 0
    column: 5
- token: Separator
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: YamlVersion
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 9
    line: 0
    column: 9
- token: Separator
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 11
    line: 0
    column: 11
- token: Comment
  start:
    index: 11
    line: 0
    column: 11
  end:
    index: 12
    line: 0
    column: 12
- token: CommentText
  start:
    index: 12
    line: 0
    column: 12
  end:
    index: 20
    line: 0
    column: 20
- token: Break
  start:
    index: 20
    line: 0
    column: 20
  end:
    index: 22
    line: 1
    column: 0
- token: DirectivesEnd
  start:
    index: 22
    line: 1
    column: 0
  end:
    index: 25
    line: 1
    column: 3
- token: Empty
  start:
    index: 25
    line: 1
    column: 3
  end:
    index: 25
    line: 1
    column: 3
- token: Break
  start:
    index: 25
    line: 1
    column: 3
  end:
    index: 27
    line: 2
    column: 0

