tests/suite/snapshots/suite__case_mus6_06.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Directive
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: DirectiveName
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 6
    line: 0
    column: 6
- token: Separator
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 7
    line: 0
    column: 7
- token: DirectiveParameter
  start:
    index: 7
    line: 0
    column: 7
  end:
    index: 10
    line: 0
    column: 10
- token: Break
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 12
    line: 1
    column: 0
- token: DirectivesEnd
  start:
    index: 12
    line: 1
    column: 0
  end:
    index: 15
    line: 1
    column: 3
- token: Empty
  start:
    index: 15
    line: 1
    column: 3
  end:
    index: 15
    line: 1
    column: 3
- token: Break
  start:
    index: 15
    line: 1
    column: 3
  end:
    index: 17
    line: 2
    column: 0

