tests/suite/snapshots/suite__case_myw6.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Literal
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: ChompingIndicator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Break
  start:
    line: 0
    column: 2
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Scalar
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 3
- token: Break
  start:
    line: 1
    column: 3
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Break
  start:
    line: 2
    column: 1
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Break
  start:
    line: 3
    column: 1
  end:
    line: 4
    column: 0
- token: DocumentEnd
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 3
- token: Break
  start:
    line: 4
    column: 3
  end:
    line: 5
    column: 0

