tests/suite/snapshots/suite__case_mzx3.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Separator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Scalar
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 7
- token: Break
  start:
    line: 0
    column: 7
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: SequenceEntry
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: DoubleQuote
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: DoubleQuoted
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 16
- token: DoubleQuote
  start:
    line: 1
    column: 16
  end:
    line: 1
    column: 17
- token: Break
  start:
    line: 1
    column: 17
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SequenceEntry
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: SingleQuote
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: SingleQuoted
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 16
- token: SingleQuote
  start:
    line: 2
    column: 16
  end:
    line: 2
    column: 17
- token: Break
  start:
    line: 2
    column: 17
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: SequenceEntry
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Separator
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 2
- token: Folded
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 3
- token: Break
  start:
    line: 3
    column: 3
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 2
- token: Scalar
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 7
- token: ScalarBreak
  start:
    line: 4
    column: 7
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: SequenceEntry
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 1
- token: Separator
  start:
    line: 5
    column: 1
  end:
    line: 5
    column: 2
- token: Scalar
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 13
- token: Break
  start:
    line: 5
    column: 13
  end:
    line: 6
    column: 0

