tests/suite/snapshots/suite__case_n4jp.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: \" key2: \\\"bad indentation\\\"\\r\\n\""
  start:
    index: 25
    line: 2
    column: 0
  end:
    index: 25
    line: 2
    column: 0

